tests/ui/parser/assoc/assoc-oddities-1.stderr
error: expected one of `.`, `;`, `?`, or `}`, found `[`
  --> $DIR/assoc-oddities-1.rs:10:28
   |
LL |     ..if c { a } else { b }[n];
   |                            ^ expected one of `.`, `;`, `?`, or `}`

error: aborting due to 1 previous error

